--- a/.github/workflows/rpi4-images.yaml
+++ b/.github/workflows/rpi4-images.yaml
@@ -23,7 +23,7 @@ jobs:
           format: '22.MM'
       -
         id: image-build
-        uses: BigLinux-Package-Build/build-iso-arm@master
+        uses: BigLinux-Package-Build/build-iso-arm@main
         with:
           device: ${{ matrix.device }}
           edition: ${{ matrix.edition }}
