--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ inputs:
   arm-profiles-repo:
     description: 'arm-profiles to clone'
     required: false
-    default: 'https://gitlab.manjaro.org/manjaro-arm/applications/arm-profiles'
+    default: 'https://github.com/biglinux/biglinux-arm-profiles'
   device:
     description: 'name of the device the build is for'
     required: true
