--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,14 @@ inputs:
     description: 'arm-profiles to clone'
     required: false
     default: 'https://github.com/biglinux/biglinux-arm-profiles'
+  img-name: 
+    description: 'Name for Imagem'
+    required: false
+    default: 'BigLinux'
+  name: 
+    description: 'Name for System, User, HostName and Password.'
+    required: false
+    default: 'biglinux'
   device:
     description: 'name of the device the build is for'
     required: true
@@ -22,6 +30,7 @@ inputs:
   overlay-repo:
     description: 'custom overlay repo'
     required: false
+    default: 'https://repo.biglinux.com.br/stable/$arch/biglinux-stable.db'
   imgtype:
     description: 'image type: normal (default), factory'
     required: false
@@ -155,15 +164,29 @@ runs:
         sudo sed -i -e 's|1> /dev/null 2>&1||g' /usr/share/manjaro-arm-tools/lib/functions.sh
         sudo sed -i -e 's|2>/dev/null||g' /usr/share/manjaro-arm-tools/lib/functions.sh
         
-    # - name: BigLinux Changes
-    #   shell: bash
-    #   run: |
-    #     sed "s/#USER=.*/USER='biglinux'/" /etc/manjaro-arm-tools/manjaro-arm-tools.conf
-    #     sed "s/#USER=.*/USER='biglinux'/" /usr/share/manjaro-arm-tools/lib/manjaro-arm-tools.conf
-    #     sed "s/#HOSTNAME=.*/HOSTNAME='biglinux'/" /etc/manjaro-arm-tools/manjaro-arm-tools.conf
-    #     sed "s/#HOSTNAME=.*/HOSTNAME='biglinux'/" /usr/share/manjaro-arm-tools/lib/manjaro-arm-tools.conf
-        
-        
+    - name: BigLinux Changes
+      shell: bash
+      run: |
+        sed -i "s/#USER=.*/USER='${{ inputs.name }}'/" /etc/manjaro-arm-tools/manjaro-arm-tools.conf
+        sed -i "s/#USER=.*/USER='${{ inputs.name }}'/" /usr/share/manjaro-arm-tools/lib/manjaro-arm-tools.conf
+        sed -i "s/#HOSTNAME=.*/HOSTNAME='${{ inputs.name }}-arm'/" /etc/manjaro-arm-tools/manjaro-arm-tools.conf
+        sed -i "s/#HOSTNAME=.*/HOSTNAME='${{ inputs.name }}'/" /usr/share/manjaro-arm-tools/lib/manjaro-arm-tools.conf
+        sed -i "s/#PASSWORD=.*/PASSWORD='${{ inputs.name }}-arm'/" /etc/manjaro-arm-tools/manjaro-arm-tools.conf
+        sed -i "s/#PASSWORD=.*/PASSWORD='${{ inputs.name }}'/" /usr/share/manjaro-arm-tools/lib/manjaro-arm-tools.conf
+    #     sed -i ""/IMGNAME=/s/Manjaro/${{ inputs.img-name }}/" /usr/share/manjaro-arm-tools/lib/functions.sh
+    
+    #     sed -i "/--populate/s/manjaro-arm/manjaro-arm ${{ inputs.name }}/" /usr/share/manjaro-arm-tools/lib/functions.sh
+    #     sed -i 's/Optional TrustAll/PackageRequired/' /usr/share/manjaro-arm-tools/lib/functions.sh
+    #     sed -i "/menuentry/s/Manjaro/${{ inputs.img-name }}/" /usr/share/manjaro-arm-tools/lib/functions.sh
+    
+    #     ALERT
+    #     Verficar linha 323 /usr/share/manjaro-arm-tools/lib/functions.sh
+    #     OEM linha 509 /usr/share/manjaro-arm-tools/lib/functions.sh
+    #     minimal/server linha 460 /usr/share/manjaro-arm-tools/lib/functions.sh
+    
+    #     ${{ inputs.name }}
+    #     ${{ inputs.img-name }}
+    
     - name: checkout-arm-profiles
       shell: bash
       env:
@@ -171,9 +194,9 @@ runs:
       run: |
         sudo git clone --depth 1 ${REPO} arm-profiles
         
-    # Tmate ##
-    - name: Setup TMATE Session
-      uses: mxschmitt/action-tmate@v3
+    # # Tmate ##
+    # - name: Setup TMATE Session
+    #   uses: mxschmitt/action-tmate@v3
         
     - id: build
       shell: bash
@@ -253,6 +276,10 @@ runs:
         cp -v $FILE_PKG .
         echo "file-pkg=$(basename $FILE_PKG)" >> $GITHUB_OUTPUT
         echo "FILE_PKG=$(basename $FILE_PKG)" >> $GITHUB_ENV
+        
+    # # Tmate ##
+    # - name: Setup TMATE Session
+    #   uses: mxschmitt/action-tmate@v3
 
 #    - id: gpg_sign
 #      shell: bash
