--- a/.github/workflows/rpi4-images.yaml
+++ b/.github/workflows/rpi4-images.yaml
@@ -25,7 +25,7 @@ jobs:
       - id: name
         shell: bash
         run: |
-          echo "name=$(echo ${{ matrix.img-name }}" | sed -e 's/\(.*\)/\L\1/') >> $GITHUB_OUTPUT
+          echo "name=$(echo ${{ matrix.img-name }} | sed -e 's/\(.*\)/\L\1/')" >> $GITHUB_OUTPUT
           
       - id: image-build
         uses: BigLinux-Package-Build/build-iso-arm@main
