cat pacman.conf

--- a/action.yml
+++ b/action.yml
@@ -181,6 +181,7 @@ runs:
         sudo sed -i "s/PASSWORD=.*/PASSWORD='${{ inputs.name }}-arm'/" /usr/share/manjaro-arm-tools/lib/functions.sh
         
         sudo sed -i "/IMGNAME=/s/Manjaro/${{ inputs.img-name }}/" /usr/share/manjaro-arm-tools/lib/functions.sh
+        sudo sed -i "/IMGNAME=/s/Manjaro/${{ inputs.img-name }}/" /usr/bin/buildarmimg
     
     #     sudo sed -i "/--populate/s/manjaro-arm/manjaro-arm ${{ inputs.name }}/" /usr/share/manjaro-arm-tools/lib/functions.sh
     #     sudo sed -i 's/Optional TrustAll/PackageRequired/' /usr/share/manjaro-arm-tools/lib/functions.sh
@@ -192,7 +193,7 @@ runs:
     #     Verficar linha 323 /usr/share/manjaro-arm-tools/lib/functions.sh
     #     OEM linha 509 /usr/share/manjaro-arm-tools/lib/functions.sh
     #     minimal/server linha 460 /usr/share/manjaro-arm-tools/lib/functions.sh
-    #     /var/lib/manjaro-arm-tools/img/rootfs_aarch64/etc/pacman.conf
+         cat /var/lib/manjaro-arm-tools/img/rootfs_aarch64/etc/pacman.conf
     #     
     #      
     #     ${{ inputs.name }}
