--- a/.github/workflows/rpi4-matrix.yaml
+++ b/.github/workflows/rpi4-matrix.yaml
@@ -50,7 +50,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.time.outputs.time }}
-          name: Release ${{ steps.time.outputs.time }}
+          name: BigLinux ARM ${{ steps.time.outputs.time }}
           draft: false
           prerelease: false
           files: |
