--- a/.github/workflows/rootfs_build.yaml
+++ b/.github/workflows/rootfs_build.yaml
@@ -118,7 +118,7 @@ jobs:
         run: |
           # sudo buildrootfs
           
-          sudo su
+          su root
           
           # Set globals
           LIBDIR=/usr/share/manjaro-arm-tools/lib
